# wikifunctions

./: Cargo.toml  LICENSE-MIT  README.md
src/: label.rs  lib.rs  model.rs  tests.rs
src/model/: list.rs  object.rs
test_data/: evaluator_input.json  full_eval.json  list_string.json
wf-evaluator/: Cargo.toml
wf-evaluator/src/: function_template.rs  main.rs  ty.rs
wfrt/: Cargo.toml
wfrt/src/: ffi.rs  lib.rs
