[package]
name = "wf-evaluator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
wikifunctions = { path = "../" }
wfrt = { path = "../wfrt" }
tempfile = "3.7.0"
libloading = "0.8.0"
